[package]
name = "longan_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"
longan-nano = { version = "0.3.0", features = ["lcd", "sdcard"] }
embedded-sdmmc = "0.3.0"
